# FastAPI-my-template-app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: .env.template  config.py  create_fastapi_app.py  main.py  prestart.sh
src/alembic/: env.py
src/alembic/versions/: 2025_12_20_1924-45dc24e5bf22_demo_user_migration.py
src/api/: __init__.py  redis_example.py  users_example.py
src/crud/: users.py
src/database/: db_helper.py
src/models/: __init__.py  base.py  user.py
src/utils/: redis_key_builders.py
